{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 105,
  "lineage": "739afd94-300a-b20d-727c-bebdd54aa23a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:internet-gateway/igw-0ca09b0b0ec032119",
            "id": "igw-0ca09b0b0ec032119",
            "owner_id": "398050108341",
            "tags": {
              "Name": "finance-tracker-igw"
            },
            "tags_all": {
              "Name": "finance-tracker-igw"
            },
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:route-table/rtb-03cea4d47eec4b99b",
            "id": "rtb-03cea4d47eec4b99b",
            "owner_id": "398050108341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca09b0b0ec032119",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finance-tracker-pubic-rt"
            },
            "tags_all": {
              "Name": "finance-tracker-pubic-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5308f52492c4244",
            "route_table_id": "rtb-03cea4d47eec4b99b",
            "subnet_id": "subnet-069110f2ede2ae3e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:security-group/sg-069fe78d261576136",
            "description": "allow inbound traffic to ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069fe78d261576136",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "finance-tracker-ecs-sg",
            "name_prefix": "",
            "owner_id": "398050108341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "finance-tracker-ecs-sg"
            },
            "tags_all": {
              "Name": "finance-tracker-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:security-group/sg-0d6c331e9946c191d",
            "description": "allow PstgreSQL from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c331e9946c191d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069fe78d261576136"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "finance-tracker-rds-sg",
            "name_prefix": "",
            "owner_id": "398050108341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "finance-tracker-rds-sg"
            },
            "tags_all": {
              "Name": "finance-tracker-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:subnet/subnet-01d614ca09187ac1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d614ca09187ac1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398050108341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finance-tracker-private"
            },
            "tags_all": {
              "Name": "finance-tracker-private"
            },
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:subnet/subnet-0f6224b2dd836aa9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6224b2dd836aa9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398050108341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finance-tracker-private2"
            },
            "tags_all": {
              "Name": "finance-tracker-private2"
            },
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:subnet/subnet-069110f2ede2ae3e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069110f2ede2ae3e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398050108341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finance-tracker-pubic"
            },
            "tags_all": {
              "Name": "finance-tracker-pubic"
            },
            "vpc_id": "vpc-0136c68cb54cdc462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:398050108341:vpc/vpc-0136c68cb54cdc462",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9a16755370ddbec",
            "default_route_table_id": "rtb-06c42429d7c29c6f0",
            "default_security_group_id": "sg-0144150372ec2ca74",
            "dhcp_options_id": "dopt-0c6a60e291474ab85",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0136c68cb54cdc462",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c42429d7c29c6f0",
            "owner_id": "398050108341",
            "tags": {
              "Name": "finance-tracker-vpc"
            },
            "tags_all": {
              "Name": "finance-tracker-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}